Fix loading indicator layout issues

--- a/webviews/common/common.css
+++ b/webviews/common/common.css
@@ -458,6 +458,20 @@ button.inlined-dropdown {
 	margin-left: 5px;
 }
 
+.commit-spinner-inline {
+	margin-left: 8px;
+	display: inline-flex;
+	align-items: center;
+	vertical-align: middle;
+}
+
+.commit-spinner-before {
+	margin-right: 6px;
+	display: inline-flex;
+	align-items: center;
+	vertical-align: middle;
+}
+
 .loading {
 	animation: spinner-rotate 1s linear infinite;
 }
